# openglLearning

./: CMakeLists.txt  b  buildrun.sh  rebuild.sh
resources/models/lampPost/: lamppostthingy.mtl
shaders/: modelLoading.fs  shader.fs
src/: Shader.cpp  Shader.h  camera.cpp  camera.h  filereader.h  global.cpp  global.h  loadTexture.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  openglErrorReporting.cpp  shader.cpp  shader.h
